<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".OfferEditRecordActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/addoffers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/updateoffer"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/personImage"
            android:layout_width="86dp"
            android:layout_height="68dp"

            android:layout_marginTop="16dp"
            android:padding="2dp"
            android:src="@drawable/ic_action_addphoto"
            android:contentDescription="@string/todo" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:autofillHints="image"
            android:background="@drawable/background"
            android:hint="@string/offername"
            android:inputType="textPersonName|textCapWords"
            android:padding="10dp" />

        <EditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:autofillHints="name"
            android:background="@drawable/background"
            android:hint="@string/offerprice"
            android:inputType="date"
            android:padding="10dp" />

        <EditText
            android:id="@+id/valid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:autofillHints="time"
            android:background="@drawable/background"
            android:hint="@string/validtill"
            android:inputType="date"
            android:padding="10dp" />

        <Button
            android:id="@+id/addofferBtn"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"

            android:background="@drawable/background"
            android:text="@string/update"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />
    </LinearLayout>
    </ScrollView>

</RelativeLayout>