<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".login">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="@dimen/marginStart_logo"
        android:layout_marginTop="@dimen/marginStop_logo"
        android:contentDescription="@string/logo_image"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="center"
    android:orientation="vertical"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/txt_username"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:background="@drawable/background"
            android:hint="@string/user_name"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:background="@drawable/background"
            android:hint="@string/pass"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginStart="@dimen/login_start"
            android:layout_marginTop="12dp"
            android:background="@drawable/background"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>