<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".index_main">

    <!--top layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="1"
        android:background="#56FF02D5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--logo image-->
        <ImageView
            android:id="@+id/imglogo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="@dimen/logo_top"
            android:layout_marginEnd="150dp"
            android:contentDescription="@string/logo_image"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

    </LinearLayout>

    <!--bottom layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_marginTop="150dp"
        android:layout_weight="3"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <!--bottom left layout-->
        <LinearLayout
            android:layout_width="230dp"
            android:layout_height="550dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <!--login button-->

            <!--Appointments button-->
            <ImageButton
                android:id="@+id/imgLogin"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginTop="@dimen/margin_top"
                android:src="@drawable/login"
                android:background="#ECDBF1"
                android:contentDescription="@string/logon_image_des" />

            <ImageButton
                android:id="@+id/imgAppointments"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginTop="@dimen/margin_top"
                android:background="#ECDBF1"
                android:src="@drawable/appointments"

                android:contentDescription="@string/appointments_des" />

            <!--Offers button-->
            <ImageButton
                android:id="@+id/imgOffers"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginTop="@dimen/margin_top"
                android:background="#ECDBF1"
                android:src="@drawable/offers"
                android:contentDescription="@string/offers_des" />
        </LinearLayout>
    </LinearLayout>

    <!-- bottom right layout-->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="550dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="150dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--registration button-->
        <ImageButton
            android:id="@+id/imgregistration"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="@dimen/margin_top"
            android:background="#ECDBF1"
            android:src="@drawable/registration"
            android:contentDescription="@string/registration_des" />

        <!--services button-->
        <ImageButton
            android:id="@+id/imgServices"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="@dimen/margin_top"
            android:background="#ECDBF1"
            android:src="@drawable/services"
            android:contentDescription="@string/services_des" />

        <!--contact button-->
        <ImageButton
            android:id="@+id/imgContact"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="@dimen/margin_top"
            android:background="#ECDBF1"
            android:src = "@drawable/contact"
            android:contentDescription="@string/contacts_des" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>